--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Ulam's Spiral</title>
     <!-- App Styles -->
+    <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
 <body ng-app="spiral">
 
