Flexbox and grunt watch

--- a/app/main.html
+++ b/app/main.html
@@ -1,7 +1,3 @@
-<div id="config-form">
-    <input placeholder="Upper range" type="number" ng-model="range"/>
-</div>
-
 <div id="spiral">
-    <div class="item" ng-repeat="i in getNumber(range) track by $index" ng-class="{prime: checkPrime($index+1)}">{{$index + 1}}</div>
+    <div class="item flex-item" ng-repeat="i in getNumber(range) track by $index" ng-class="{prime: checkPrime($index+1)}">{{$index + 1}}</div>
 </div>
