--- a/app/main.html
+++ b/app/main.html
@@ -1,3 +1,3 @@
 <div id="spiral">
-    <div class="item flex-item" ng-repeat="i in getNumber(range) track by $index" ng-class="{prime: checkPrime($index+1)}">{{$index + 1}}</div>
+    <div class="item flex-item" ng-repeat="i in getNumber(upper_bound-lower_bound +1) track by $index" ng-class="{prime: checkPrime($index + lower_bound)}">{{$index + lower_bound}}</div>
 </div>
