--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <!-- App Styles -->
     <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
-<body ng-app="spiral">
+<body ng-app="spiral" ng-controller="MainController">
 
 <div id="config-form">
-    <input placeholder="Upper range" type="number" ng-model="range"/>
+    <input placeholder="Start from" type="number" ng-model="lower_bound"/>
+    <input placeholder="Upper range" type="number" ng-model="upper_bound"/>
 </div>
-<div ng-include="'app/main.html'" class="flex-container" ng-controller="MainController"></div>
+<div ng-include="'app/main.html'" class="flex-container"></div>
 
 <!-- Angular Deps -->
 <script src="/libs/angular/angular.min.js"></script>
