First rev ready for deployment

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- App Styles -->
     <link rel="stylesheet" href="assets/css/style.css"/>
 </head>
-<body ng-app="spiral" ng-controller="MainController">
+<body ng-app="spiral" ng-controller="MainController" ng-cloak>
 
 <div id="config-form">
     <input placeholder="Start from" type="number" ng-model="lower_bound"/>
