Resizable canvas with redraw

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Spiral</title>
+  <script src="node_modules/vue/dist/vue.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <canvas id="canvas" height="2000px" width="2000px"></canvas>
+
+
+  <canvas id="canvas"></canvas>
 
   <script src="spiral.js"></script>  
 </body>
