--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
-  <canvas id="canvas"></canvas>
-
+  <div class="flex-container">
+    <canvas id="canvas"></canvas>
+  </div>
   <script src="spiral.js"></script>  
 </body>
 </html>
