--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="flex-container">
-    <canvas id="canvas"></canvas>
+  <div id="spiral">
+    <div id="controls">
+
+    </div>
+
+    <spiral></spiral>
   </div>
-  <script src="spiral.js"></script>  
+    
+  <script src="spiral.js"></script>
 </body>
 </html>
+
