--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
   <div id="spiral">
-    <div id="controls">
 
-    </div>
+    <controls></controls>
 
     <spiral></spiral>
   </div>
